tests/invalid/duplicate_action.intent
module DupActionTest

entity Account {
  id: UUID
}

action Transfer {
  from: Account

  requires {
    from.id != null
  }
}

action Transfer {
  to: Account

  requires {
    to.id != null
  }
}
